Most of the input side of feedback is pretty. Plus fixed wrapping issue with response

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -131,12 +131,37 @@ h1{
 
 div.FirebaseScroll{
     overflow-y:scroll;
-    /* overflow-x: visible; */
+    overflow-wrap: break-word;
     width:100%;
     background-color:#666;
     max-height: 100vh;
 }
 
+
+/* Fields */
+div.FeedbackLabel{
+    padding:10px;
+    text-align:left;
+}
+input[type=text]{
+    -moz-box-shadow: inset -3px -3px 10px #eee;
+    -webkit-box-shadow: inset -3px -3px 10px #eee;
+    box-shadow: inset -3px -3px 10px #eee;
+    border-radius: 15px;
+    width: 100%;
+    padding: 10px;
+ }
+ /* Button */
+ input[type=submit] {
+    -moz-box-shadow: inset -3px -3px 10px #cc870a;
+    -webkit-box-shadow: inset -3px -3px 10px #cc870a;
+    box-shadow: inset -3px -3px 10px #cc870a;
+    background-color: #f7b31c; /* Fill color */
+    color: white; /* Text color */
+    border-radius: 15px; /* Rounded button edges */
+    font-style: italic; /* Italicize text */
+    padding: 10px 30px; /* Distance between text and border */
+ }
 
 li.FeedbackItem{
     height: '250px';
